add basic style to ball div

--- a/css/style.css
+++ b/css/style.css
@@ -9,3 +9,13 @@ body {
 h1 {
     color: white;
 }
+
+
+.ball {
+    height: 100px;
+    width: 100px;
+
+    margin: auto;
+    border-radius: 50%;
+    background-color: steelblue;
+}
